--- a/homework/pizza-express/package.json
+++ b/homework/pizza-express/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.4",
-    "hbs": "^4.0.1"
+    "hbs": "^4.0.1",
+    "jQuery": "^1.7.4"
   }
 }
