--- a/labs/express/starter-code-hbs/package.json
+++ b/labs/express/starter-code-hbs/package.json
@@ -4,11 +4,14 @@
   "description": "An app to build your own custom burger",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node.server",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "hbs": "^4.0.0",
