--- a/homework/mongo/donut-shop/donut_mongoose/package.json
+++ b/homework/mongo/donut-shop/donut_mongoose/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
@@ -11,10 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "express": "^4.13.4",
+    "express": "^4.15.5",
     "hbs": "^4.0.1",
-    "morgan": "^1.6.1",
     "method-override": "^2.3.5",
-    "mongoose": "^4.4.3"
+    "mongoose": "^4.4.3",
+    "morgan": "^1.6.1"
   }
 }
